# critical-minerals-tracker

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  critical-minerals-tracker-project.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  sync_data.yml
app/: index.html  package-lock.json  package.json
app/public/data/: funding.json  timelines.json
app/src/: App.css  App.tsx
app/src/components/: BottleneckAnalysis.tsx  Dashboard.tsx  FilterPanel.tsx  FundingBadge.tsx  InvestmentHeatmap.tsx  MineralMap.tsx  ProjectDetail.tsx  ProjectTimeline.tsx  SupplyChainDiagram.tsx  WhatIfSimulation.tsx
app/src/hooks/: useData.ts
app/src/types/: index.ts
apps/api/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
apps/api/scripts/: sync_all.py  sync_cmif.py  sync_nrcan.py  sync_prices.py
apps/api/src/: main.py
apps/api/src/data/: changelog.json  funding_metadata.json  prices.json  sync_log.json
apps/api/src/data/history/: funding_2026-06-29.json  minerals_2026-06-17.json
apps/api/src/data/raw/: cmif_recipients.csv  nrcan_sync_2026-06-24.json  nrcan_sync_2026-06-29.json
apps/api/src/models/: project.py
apps/api/src/routes/: projects.py  stats.py
apps/api/src/services/: data_loader.py  diff_engine.py  news.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx  index.css
apps/web/src/hooks/: useData.ts  (+2 more)
data/: minerals.json  nrcan_advanced_projects_raw.json  nrcan_mines_raw.json  nrcan_processing_projects_raw.json  nrcan_processing_raw.json  supplychain.json
docs/: DATA_SOURCES.md  FEATURE_PROPOSALS.md
(+21 files in other folders)
